--- a/ios-10-10-17/Base.lproj/Main.storyboard
+++ b/ios-10-10-17/Base.lproj/Main.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zf3-Mg-Ota">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Software Development Process-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MP3" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,9 +23,182 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Software Development Process" id="lLu-ag-OxU">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="ZVj-4W-HYv"/>
+                        <barButtonItem key="rightBarButtonItem" title="Go" id="jig-NH-Ap5">
+                            <connections>
+                                <segue destination="Zrc-76-3gY" kind="show" id="qai-Xu-HtS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1080.8" y="138.98050974512745"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="o3I-Mm-hy9">
+            <objects>
+                <viewController id="Zrc-76-3gY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I4b-4T-0sJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dyo-n6-rSU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nhV-wP-gIC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-Ye-fAM">
+                                <rect key="frame" x="16" y="621" width="343" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1Q-zG-N9f">
+                                        <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Practices"/>
+                                        <connections>
+                                            <segue destination="TGN-y8-q1m" kind="show" id="p6Y-yM-m1A"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7xW-eC-OVb">
+                                        <rect key="frame" x="171.5" y="0.0" width="171.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Methodologies"/>
+                                        <connections>
+                                            <segue destination="G0l-3w-7Mh" kind="show" id="yry-vy-V3d"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rmF-ee-dUX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="533"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E6O-nE-40z">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="533"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="software development processes(1)" translatesAutoresizingMaskIntoConstraints="NO" id="t9Z-Xk-KXY">
+                                                <rect key="frame" x="37.5" y="16" width="299" height="327"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Software Development Process" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Quw-op-Ge1">
+                                                <rect key="frame" x="8" y="359" width="359" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="bhH-bE-MPi">
+                                                <rect key="frame" x="8" y="399" width="359" height="256"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="256" id="ceF-tG-cot"/>
+                                                </constraints>
+                                                <string key="text">In software engineering, a software development process is the process of dividing software development work into distinct phases to improve design, product management, and project management. It is also known as a software development life cycle. The methodology may include the pre-definition of specific deliverables and artifacts that are created and completed by a project team to develop or maintain an application.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="t9Z-Xk-KXY" firstAttribute="centerX" secondItem="E6O-nE-40z" secondAttribute="centerX" id="6Hy-xm-tsZ"/>
+                                            <constraint firstItem="bhH-bE-MPi" firstAttribute="leading" secondItem="E6O-nE-40z" secondAttribute="leadingMargin" id="7Br-Jn-EZ5"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="bhH-bE-MPi" secondAttribute="trailing" id="Dcx-aC-uIo"/>
+                                            <constraint firstItem="t9Z-Xk-KXY" firstAttribute="top" secondItem="E6O-nE-40z" secondAttribute="top" constant="16" id="EBt-cM-s5H"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Quw-op-Ge1" secondAttribute="trailing" id="iwI-vt-srn"/>
+                                            <constraint firstItem="Quw-op-Ge1" firstAttribute="leading" secondItem="E6O-nE-40z" secondAttribute="leadingMargin" id="j4h-sc-PyM"/>
+                                            <constraint firstItem="Quw-op-Ge1" firstAttribute="top" secondItem="t9Z-Xk-KXY" secondAttribute="bottom" constant="16" id="lKt-NN-dTZ"/>
+                                            <constraint firstItem="bhH-bE-MPi" firstAttribute="top" secondItem="Quw-op-Ge1" secondAttribute="bottom" constant="16" id="q3x-oU-VPo"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="E6O-nE-40z" firstAttribute="centerX" secondItem="rmF-ee-dUX" secondAttribute="centerX" id="hfm-eI-EGw"/>
+                                    <constraint firstAttribute="trailing" secondItem="E6O-nE-40z" secondAttribute="trailing" id="itN-jW-4hD"/>
+                                    <constraint firstItem="E6O-nE-40z" firstAttribute="top" secondItem="rmF-ee-dUX" secondAttribute="top" id="nnj-xy-9m4"/>
+                                    <constraint firstItem="E6O-nE-40z" firstAttribute="leading" secondItem="rmF-ee-dUX" secondAttribute="leading" id="pLX-7y-0Mg"/>
+                                    <constraint firstAttribute="bottom" secondItem="E6O-nE-40z" secondAttribute="bottom" id="rri-Y6-a1G"/>
+                                    <constraint firstItem="E6O-nE-40z" firstAttribute="centerY" secondItem="rmF-ee-dUX" secondAttribute="centerY" id="vvc-Ax-uEj"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rmF-ee-dUX" firstAttribute="top" secondItem="I4b-4T-0sJ" secondAttribute="bottom" id="K0p-4o-czm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Xmk-Ye-fAM" secondAttribute="trailing" id="XKf-AH-BPc"/>
+                            <constraint firstItem="Xmk-Ye-fAM" firstAttribute="top" secondItem="rmF-ee-dUX" secondAttribute="bottom" constant="24" id="gT9-6x-bvD"/>
+                            <constraint firstAttribute="trailing" secondItem="rmF-ee-dUX" secondAttribute="trailing" id="iQu-iQ-gbW"/>
+                            <constraint firstItem="Dyo-n6-rSU" firstAttribute="top" secondItem="Xmk-Ye-fAM" secondAttribute="bottom" constant="16" id="lim-Qd-8Go"/>
+                            <constraint firstItem="Xmk-Ye-fAM" firstAttribute="leading" secondItem="nhV-wP-gIC" secondAttribute="leadingMargin" id="pT5-bl-uiu"/>
+                            <constraint firstItem="rmF-ee-dUX" firstAttribute="leading" secondItem="nhV-wP-gIC" secondAttribute="leading" id="tkw-Rt-EZp"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="About" id="W6e-Fa-bcp">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="zfH-uY-9Q0"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r8K-qi-hhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1952.8" y="138.98050974512745"/>
+        </scene>
+        <!--Methodologies-->
+        <scene sceneID="xR5-LU-0EN">
+            <objects>
+                <viewController id="G0l-3w-7Mh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qnS-pO-hfD"/>
+                        <viewControllerLayoutGuide type="bottom" id="uBS-hx-iGI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aM2-jK-cUX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Methodologies" id="rpX-YK-Pxx">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="u4x-8C-MbP"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AX5-G8-ASP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2738" y="606"/>
+        </scene>
+        <!--Practices-->
+        <scene sceneID="GVL-hg-vac">
+            <objects>
+                <viewController id="TGN-y8-q1m" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xU8-Ec-XV9"/>
+                        <viewControllerLayoutGuide type="bottom" id="xZY-bb-LCK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TUF-fd-g0M">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Practices" id="eWj-3x-1ra">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="ZxV-Rv-xdU"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jrv-Yr-gZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2761" y="-72"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gO8-cP-Z4i">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zf3-Mg-Ota" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jKj-Ie-KWg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vmi-Pi-rbH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Yg-Xy-6b3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="222" y="139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="software development processes(1)" width="299" height="327"/>
+    </resources>
 </document>
