--- a/ios-10-10-17/Base.lproj/Main.storyboard
+++ b/ios-10-10-17/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
         <!--Add Item-->
         <scene sceneID="c5H-oC-06r">
             <objects>
-                <tableViewController id="8jH-de-lAl" sceneMemberID="viewController">
+                <tableViewController id="8jH-de-lAl" customClass="AddItemTableViewController" customModule="Activity5" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oBY-1R-46M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -231,8 +231,31 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.37647058823529411" green="0.49019607843137253" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="Drb-SN-YOz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="q09-rJ-OyL">
                                         <rect key="frame" x="0.0" y="440" width="414" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q09-rJ-OyL" id="uyE-ey-Ouw">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All fields are required." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z69-Qx-Bm9">
+                                                    <rect key="frame" x="16" y="12" width="382" height="55"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <color key="textColor" red="1" green="0.32156862749999998" blue="0.32156862749999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Z69-Qx-Bm9" secondAttribute="bottom" constant="12" id="PGj-gn-SAg"/>
+                                                <constraint firstItem="Z69-Qx-Bm9" firstAttribute="leading" secondItem="uyE-ey-Ouw" secondAttribute="leading" constant="16" id="Rce-aZ-Cl8"/>
+                                                <constraint firstAttribute="trailing" secondItem="Z69-Qx-Bm9" secondAttribute="trailing" constant="16" id="U5z-4E-m2C"/>
+                                                <constraint firstItem="Z69-Qx-Bm9" firstAttribute="top" secondItem="uyE-ey-Ouw" secondAttribute="top" constant="12" id="wmy-NI-SSU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.37647058820000001" green="0.49019607840000001" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="Drb-SN-YOz">
+                                        <rect key="frame" x="0.0" y="520" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Drb-SN-YOz" id="OD6-jr-zwt">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="79"/>
@@ -248,6 +271,9 @@
                                                             <state key="normal" title="Save">
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             </state>
+                                                            <connections>
+                                                                <segue destination="K8W-WL-T7O" kind="show" id="Rge-sz-1aa"/>
+                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fsb-N7-ssQ">
                                                             <rect key="frame" x="207" y="0.0" width="207" height="79"/>
@@ -256,6 +282,9 @@
                                                             <state key="normal" title="Clear">
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             </state>
+                                                            <connections>
+                                                                <action selector="btnClear:" destination="8jH-de-lAl" eventType="touchUpInside" id="ZHI-ON-jXR"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                 </stackView>
@@ -279,6 +308,12 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Add Item" id="9v7-m2-NH1"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="itemDesc" destination="t5d-mo-VFM" id="D2c-3Q-7I4"/>
+                        <outlet property="itemName" destination="13P-c1-Cpb" id="1Eq-hV-p24"/>
+                        <outlet property="itemPrice" destination="MQU-fc-3cm" id="FOi-oe-BcV"/>
+                        <outlet property="lblError" destination="Z69-Qx-Bm9" id="CIZ-Kf-Thx"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fFf-1T-ngA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -425,4 +460,7 @@
     <resources>
         <image name="cart" width="128" height="128"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Rge-sz-1aa"/>
+    </inferredMetricsTieBreakers>
 </document>
